# circle-googletest

./: CMakeLists.txt  ReadMe.adoc
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
unit_test/: CMakeLists.txt
unit_test/src/: main.cpp
